Add a new relation between modules, a module can create another module.

--- a/reflexactoring.diagram/messages.properties
+++ b/reflexactoring.diagram/messages.properties
@@ -111,3 +111,7 @@ ModuleDependency9CreationTool_title=ModuleDependency
 ModuleDependency9CreationTool_desc=Create new ModuleDependency
 NavigatorGroupName_ModuleExtend_4006_target=target
 NavigatorGroupName_ModuleExtend_4006_source=source
+ModuleCreation10CreationTool_title=ModuleCreation
+ModuleCreation10CreationTool_desc=Create new ModuleCreation
+NavigatorGroupName_ModuleCreation_4007_target=target
+NavigatorGroupName_ModuleCreation_4007_source=source
